--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   firebase_storage: ^11.0.15
   cloud_firestore: ^4.4.4
   image_picker: ^0.8.7
+  awesome_snackbar_content: ^0.1.2
+  fluttertoast: ^8.2.1
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
